# PoECraft

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  README.md  SHA256SUMS.txt  START_HERE.md  pyproject.toml
config/: failure_consumption_matrix.yaml  initial_states.yaml  project_scope.yaml  success_criteria.yaml
data/: essence_outputs.yaml  family_registry.yaml  mechanics_evidence.yaml  mods_desecrated_quarterstaff.yaml  mods_ordinary_quarterstaff.yaml  omens.yaml  operations.yaml  reveal_sampling_contract.yaml  sources.yaml
examples/: README.md  m32_seeded_mc_smoke.py
ledger/: ACCEPTED_ARTIFACTS.md  DECISIONS.md  HISTORICAL_INDEX.md  OPEN_BLOCKERS.md
manifest/: Agent_Role_Pack.md  GitHub_Workflow_Protocol.md  Operating_Manifest_v4.md  Participant_Voice_Charter.md
reviews/: ACTIVE_TASK_SCHEMA_V2_Proposal_Audit_Claude_v1.md  LayerA_Source_Bundle_Byte_Verification_Audit_Claude_v1.md  LayerA_Source_Bundle_Byte_Verification_Reaudit_Claude_v1.md  M32_A1_A2_Baseline_Hygiene_Audit_Claude_v1.md  M32_Audit_Claude_v1.md  M33_Oracle_Convergence_Audit_Claude_v1.md  M33_P1_Statistical_Convergence_Audit_Claude_v1.md  M34A_Multi_Seed_MC_Hardening_Audit_Claude_v1.md  M34_MC_Hardening_Design_Audit_Claude_v1.md  P2C_ACTIVE_TASK_SCHEMA_V2_Audit_Claude_v1.md  P2C_Agent_Role_Packs_Design_Audit_Claude_v1.md  P2C_Agent_Role_Packs_Implementation_Audit_Claude_v1.md  P2C_Independent_Project_Architecture_Reality_Audit_Claude_v1.md  P2C_M34B1_Implementation_Audit_Claude_v1.md  P2C_M34B_Design_Audit_Claude_v1.md  P2C_M35A_Annulment_Runtime_Audit_Claude_v1.md  (+42 more)
(+128 files in other folders)
